# cc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.hpp  compiler.pro  diagnostic.cpp  diagnostic.hpp  evaluator.cpp  grammar.y  lexer.hpp  main.cpp  mempool.cpp  mempool.hpp  sourceloc.cpp  sourceloc.hpp
constexpr/: evaluator.cpp  evaluator.hpp  value.cpp  value.hpp
diagnostic/: logger.cpp  logger.hpp  printer.cpp  printer.hpp  sourceloc.cpp  sourceloc.hpp
lexical/: lexer.cpp  lexer.hpp  pp.cpp  pp.hpp  token.cpp  token.hpp  tokentype.cpp  tokentype.hpp
old/: ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  cpp.cpp  cpp.hpp  deprecated.txt  error.cpp  error.hpp  evaluator.hpp  lexer.cpp  mempool.hpp  parser.cpp  parser.hpp  scope.cpp  scope.hpp  token.cpp  token.hpp  type.cpp  type.hpp  visitor.hpp
old/concepts/: non_copyable.hpp
semantic/: ast.cpp  ast.hpp  decl.cpp  decl.hpp  expr.cpp  expr.hpp  opcode.cpp  opcode.hpp  parser.cpp  parser.hpp  qualtype.cpp  qualtype.hpp  scope.cpp  scope.hpp  stmt.cpp  stmt.hpp  type.cpp  type.hpp  typeenum.cpp  typeenum.hpp
text/: buffer.cpp  buffer.hpp  file.cpp  file.hpp  stream.cpp  stream.hpp  uchar.cpp  uchar.hpp  ustring.cpp  ustring.hpp
utils/: iterator.hpp  list.cpp  list.hpp  mempool.cpp  mempool.hpp  ptrlist.cpp  ptrlist.hpp  vector.cpp  vector.hpp
